Remove prelrease features